# QutieFM

./: .gitignore  CMakeLists.txt  README.md
assets/: resources.qrc
debug/: CMakeCache.txt  Makefile  cmake_install.cmake
debug/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
debug/QutieFM_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
debug/QutieFM_autogen/2VD372IZQ4/: moc_GridItem.cpp
debug/QutieFM_autogen/672HJFRFA3/: moc_FileMonitor.cpp
debug/QutieFM_autogen/725WFUZ3C5/: moc_MainWidget.cpp
debug/QutieFM_autogen/E3VNUIJQQX/: moc_FileController.cpp
debug/QutieFM_autogen/OSMIIXUJMY/: moc_GridItemView.cpp
debug/QutieFM_autogen/THKROXVE55/: moc_Path.cpp
debug/QutieFM_autogen/X7D7YABPMK/: moc_MainWindow.cpp
src/: main.cpp
src/Controller/FileController/: FileController.cpp  FileController.hpp
src/Core/FileMonitor/: FileMonitor.cpp  FileMonitor.hpp
src/View/GridItemView/: GridItemView.cpp  GridItemView.hpp
src/View/MainWidget/: MainWidget.cpp  MainWidget.hpp
src/View/MainWindow/: MainWindow.cpp  MainWindow.hpp
src/View/Path/: Path.cpp  Path.hpp
src/View/Widgets/GridItem/: GridItem.cpp  GridItem.hpp
src/controller/: FileMonitorController.cpp  FileMonitorController.hpp  PlacesController.cpp  PlacesController.hpp
src/model/: FileMonitor.cpp  FileMonitor.hpp  Place.cpp  Place.hpp
src/view/: GridItem.cpp  GridItem.hpp  GridView.cpp  GridView.hpp  MainWindow.cpp  MainWindow.hpp  NavigationButton.cpp  NavigationButton.hpp  PlacesButton.cpp  PlacesButton.hpp  PlacesSidebar.cpp  PlacesSidebar.hpp
